--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,42 +8,44 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
 
-        <section class="user-conteiner">
-                <div class="photo">
-                    <img src="" alt="Random People" class="profile-img">
-                </div>
-                <div class="personal-info">
-                    <h1 data-firstName>carlos</h2>
-                    <h2 data-lastName>iuri</h2>
+    <section class="user-conteiner">
+        <div class="photo">
+            <img src="" alt="Random People" class="profile-img">
+        </div>
+        <div class="personal-info">
+            <h1 data-firstName>carlos</h2>
+                <h2 data-lastName>iuri</h2>
                 <div class="birthday-info">
                     <img src="img/birthday-cake.png" class="icon" alt="Aniversário">
 
                     <p data-dob>24/12/1992</p>
                 </div>
-                </div>
+        </div>
 
-            <div class="adress">
-                <div class="street-info">
-                    <img src="img/location.png" class="icon" alt="Rua">
-                    <p data-street></p><p data-number></p>
-                </div>
-               
-                <div class="state-info">
-                    <img src="img/building.png" class="icon" alt="Estado">
-                    <p data-city></p> /
-                    <p data-state></p> 
-                </div>
-               
-                <div class="postal-info">
-                    <img src="img/mail-box.png" class="icon" alt="CEP">
-                    <p data-postal></p> 
-                </div>
+        <div class="adress">
+            <div class="street-info">
+                <img src="img/location.png" class="icon" alt="Rua">
+                <p data-street></p>
+                <p data-number></p>
             </div>
 
-            <div class="contact">
-                <div class="phone-info">
+            <div class="state-info">
+                <img src="img/building.png" class="icon" alt="Estado">
+                <p data-city></p> /
+                <p data-state></p>
+            </div>
+
+            <div class="postal-info">
+                <img src="img/mail-box.png" class="icon" alt="CEP">
+                <p data-postal></p>
+            </div>
+        </div>
+
+        <div class="contact">
+            <div class="phone-info">
                 <img src="img/phone.png" class="icon" alt="CEP">
                 <p data-phone></p>
             </div>
@@ -50,17 +53,22 @@
                 <img src="img/smartphone.png" class="icon" alt="CEP">
                 <p data-cell></p>
             </div>
-            </div>
-            <div class="btns">
-                <button class="btnGender btnMale" value="male" data-gender="male">Homem</button>
-                <button class="btnGender btnFemale" value="female" data-gender="female">Mulher</button>
-            </div>
-        </section>
+        </div>
+        <div class="btns">
+            <button class="btnGender btnMale" value="male" data-gender="male">Homem</button>
+            <button class="btnGender btnFemale" value="female" data-gender="female">Mulher</button>
+        </div>
+    </section>
 
-        <footer class="footer">
-            <p>Desenvolvido por Carlos Iuri da Silva Caetano</p>
-            <p><div>Icons made by <a href="https://www.flaticon.com/authors/good-ware" title="Good Ware">Good Ware</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div></p>
-        </footer>
+    <footer class="footer">
+        <p>Desenvolvido por Carlos Iuri da Silva Caetano</p>
+        <p>
+        <div>Icons made by <a href="https://www.flaticon.com/authors/good-ware" title="Good Ware" target="_blank">Good
+                Ware</a> from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank">www.flaticon.com</a>
+        </div>
+        </p>
+        <p>API usada: <a href="https://randomuser.me/" title="Random User" target="_blank">Random User</a></p>
+    </footer>
     <script src="index.js"></script>
 </body>
 
